--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 
-@main("Welcome to Play") {
+@main("Welcome to Twitter Analyst a real-time sentiment analyst app") {
 
-    @play20.welcome(message)
+    message
 
 }
