fix tweet model, persistence queue and tweet task consumer

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Welcome to Twitter Analyst a real-time sentiment analyst app") {
+@main("Welcome to Twitter Analyst") {
 
 
 
