--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,13 +6,11 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/reset.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/style.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
     </head>
 
     <body>
-            <!-- Static navbar -->
         <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
@@ -21,17 +19,10 @@
             </div>
         </nav>
 
-        <div id="chart">
-            <div id="title"></div>
-
-        </div>
-
         <div class="container" role="main">
 
-            <!-- Main component for a primary marketing message or call to action -->
-            <div class="jumbotron">
+            <div id="container" style="min-width: 310px; height: 400px; max-width: 800px; margin: 0 auto"></div>
 
-            </div>
 
             <div class="page-header">
             </div>
@@ -39,7 +30,7 @@
                 <div class="col-lg-6">
                     <div class="panel panel-success">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Panel title</h3>
+                            <h3 class="panel-title">Positive Tweets</h3>
                         </div>
                         <div class="panel-body">
                             Panel content
@@ -49,7 +40,7 @@
                 <div class="col-lg-6">
                     <div class="panel panel-danger">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Panel title</h3>
+                            <h3 class="panel-title">Negative Tweets</h3>
                         </div>
                         <div class="panel-body">
                             Panel content
@@ -58,16 +49,114 @@
                 </div><!-- /.col-lg-6 -->
             </div>
 
-
-            <div class="page-header">
-            </div>
-            <div class="well">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
-            </div>
         </div>
     </body>
 
+    @*animation: Highcharts.svg,
+    events: {
+    load: function () {
+    // set up the updating of the chart each second
+    var series = this.series[0];
+    setInterval(function () {
+    var x = (Math.random(30) + 1),
+    y = ((Math.random(9) + 1) / (Math.random(10) >= 5 ? -10 : 10));
+    series.addPoint([x, y], true, true);
+    }, 1000);
+    }
+    },*@
+
+    <script src="@routes.Assets.at("javascripts/jquery-1.11.1.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/d3.v3.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/vis.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/highcharts.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/exporting.js")" type="text/javascript"></script>
+
+    <script>
+    $(function () {
+        $('#container').highcharts({
+            chart: {
+                type: 'scatter',
+                zoomType: 'xyz'
+            },
+                title: {
+                text: 'Sentiment Score VS Day '
+            },
+                subtitle: {
+                text: 'Source: Twitter API & HP Idol Sentiment Analysis - last tweets in 30 days about $HPQ.'
+            },
+            xAxis: {
+                type: 'datetime',
+                title: {
+                    enabled: true,
+                    text: 'Day'
+                },
+                showLastLabel: true
+            },
+            yAxis: {
+                title: {
+                    enabled: true,
+                    text: 'Sentiment Score (%)'
+                }
+            },
+            zAxis: {
+                title: {
+                   enabled: true,
+                   text: 'Tweet'
+                }
+            },
+            legend: {
+                layout: 'vertical',
+                align: 'left',
+                verticalAlign: 'top',
+                x: 100,
+                y: 70,
+                z: 11,
+                floating: true,
+                backgroundColor: (Highcharts.theme && Highcharts.theme.legendBackgroundColor) || '#FFFFFF',
+                borderWidth: 1
+            },
+            plotOptions: {
+                scatter: {
+                    marker: {
+                        radius: 5,
+                        states: {
+                            hover: {
+                                enabled: true,
+                                lineColor: 'rgb(100,100,100)'
+                            }
+                        }
+                    },
+                    states: {
+                        hover: {
+                            marker: {
+                                enabled: false
+                            }
+                        }
+                    },
+                    tooltip: {
+                        headerFormat: '<b>{series.name}</b><br>',
+                        pointFormat: 'Scored {point.y} at {point.x} <br> {point.tweet} <br>'
+                    }
+                }
+            },
+            series: [
+                {
+                    name: 'Negative',
+                    color: 'rgba(223, 83, 83, .5)',
+                    data: [{x: 1, y:-0.5, tweet:"Yay!  Living Clojure is out for Early Release! <br> _Trying not to hyperventilate_  "}, [16, -0.9], [7, -0.2], [15, -0.1], [15, -0.6]]
+                },
+                {
+                    name: 'Neutral',
+                    color: 'rgba(214, 209, 209, .5)',
+                    data: [[17, 0.0], [4, 0.0], [4, 0.0], [2, 0.0], [1, 0.0]]
+                },
+                {
+                    name: 'Positive',
+                    color: 'rgba(60, 118, 61, .5)',
+                    data: [[3, 0.6], [17, 0.8], [19, 0.7], [18, 0.3], [31, 0.8]]
+                }
+            ]
+            });
+    });
+    </script>
+
 </html>
