--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -23,10 +23,9 @@
 
             <div id="container" style="min-width: 310px; height: 400px; max-width: 800px; margin: 0 auto"></div>
 
-
-
             <div class="page-header">
             </div>
+
             <div class="row">
                 <div class="col-lg-6">
                     <div class="panel panel-success">
@@ -49,6 +48,11 @@
                     </div>
                 </div><!-- /.col-lg-6 -->
             </div>
+
+            <div class="page-header">
+            </div>
+
+            <div id="container2" style="height: 400px; min-width: 310px"></div>
 
         </div>
     </body>
@@ -104,6 +108,67 @@
                 console.log(event);
                 tweetsSocket.close();
             };
+        });
+
+    $(function () {
+    var seriesCounter = 0,
+        names = ['Positive', 'Negative'],
+        createChart = function () {
+            $('#container2').highcharts('StockChart', {
+                    rangeSelector: {
+                    selected: 4
+                },
+                yAxis: {
+                labels: {
+                    formatter: function () {
+                        return (this.value > 0 ? ' + ' : '') + this.value + '%';
+                    }
+                },
+                plotLines: [{
+                    value: 0,
+                    width: 2,
+                    color: 'silver'
+                    }]
+                },
+                plotOptions: {
+                    series: {
+                        compare: 'percent'
+                    }
+                },
+                tooltip: {
+                    pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y}</b> ({point.tweet}%)<br/>',
+                    valueDecimals: 2
+                },
+                series: [
+                        {
+                        name: 'Negative',
+                        color: 'rgba(223, 83, 83, .5)',
+                        data: []
+                        },
+                        {
+                        name: 'Positive',
+                        color: 'rgba(60, 118, 61, .5)',
+                        data: []
+                    }
+                ]
+            });
+        };
+
+        $.each(names, function (i, name) {
+            var url =  @routes.Application.tweets("name");
+            var tweetsBySentimentURL = "//" + host + url;
+            $.getJSON(tweetsBySentimentURL,
+                function (data) {
+                    seriesOptions[i] = {
+                        name: name,
+                        data: data
+                    };
+                    seriesCounter += 1;
+                    if (seriesCounter === names.length) {
+                        createChart();
+                    }
+                });
+        });
     });
     </script>
 
