--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -63,24 +63,23 @@
     <script src="@routes.Assets.at("javascripts/exporting.js")" type="text/javascript"></script>
 
     <script>
-        var chart;
+        var liveChart, staticChart;
 
-        function updateChart(data) {
+        function updateLiveChart(data) {
             var tweetJson = eval("(" + data + ')');
 
             var point = new Object();
             point.y = tweetJson.score;
-            point.x = Date.parse(tweetJson.created_at);
+            point.x = tweetJson.created_at;
             point.tweet = tweetJson.text;
             point.user = tweetJson.user_name;
-            var pointJson = JSON.stringify(point);
 
             if (tweetJson.sentiment == "negative") {
-                chart.series[0].addPoint(point, true, chart.series[0].activePointCount > 0);
+                liveChart.series[0].addPoint(point, true, liveChart.series[0].activePointCount > 0);
             } else if (tweetJson.sentiment == "neutral") {
-                chart.series[1].addPoint(point, true, chart.series[1].activePointCount > 0);
+                liveChart.series[1].addPoint(point, true, liveChart.series[1].activePointCount > 0);
             } else if (tweetJson.sentiment == "positive") {
-                chart.series[2].addPoint(point, true, chart.series[2].activePointCount > 0);
+                liveChart.series[2].addPoint(point, true, liveChart.series[2].activePointCount > 0);
             }
         }
     </script>
@@ -98,7 +97,7 @@
                 tweetsSocket.send("pump");
             };
             tweetsSocket.onmessage = function(event) {
-                updateChart(event.data);
+                updateLiveChart(event.data);
             };
             tweetsSocket.onerror = function(event) {
                 console.log(event);
@@ -111,15 +110,15 @@
         });
 
     $(function () {
-        var createChart = function () {
-            $('#container2').highcharts('StockChart', {
-                    rangeSelector: {
+        staticChart = $('#container2');
+        staticChart.highcharts('StockChart', {
+                rangeSelector: {
                     selected: 4
                 },
                 yAxis: {
-                labels: {
-                    formatter: function () {
-                        return (this.value > 0 ? ' + ' : '') + this.value + '%';
+                    labels: {
+                        formatter: function () {
+                            return (this.value > 0 ? ' + ' : '') + this.value + '%';
                     }
                 },
                 plotLines: [{
@@ -138,39 +137,46 @@
                     valueDecimals: 2
                 },
                 series: [
-                        {
+                    {
                         name: 'Negative',
                         color: 'rgba(223, 83, 83, .5)',
                         data: []
-                        },
-                        {
+                    },
+                    {
                         name: 'Positive',
                         color: 'rgba(60, 118, 61, .5)',
                         data: []
                     }
                 ]
-            });
-        };
+        });
 
-        var names = ['Positive', 'Negative'];
-        var seriesCounter = 0;
-
+        var names = ['Negative', 'Positive'];
+        var countSeries = 0;
         names.forEach(function(name) {
             var url =  @routes.Application.tweets("") + name;
-            var tweetsBySentimentURL = "//" + host + url;
+            var tweetsBySentimentURL = "//" + window.location.host + url;
             $.getJSON(tweetsBySentimentURL,
                     function (data) {
-                        seriesOptions[i] = {
-                            name: name,
-                            data: data
-                        };
-                        seriesCounter += 1;
-                    if (seriesCounter === names.length) {
-                        createChart();
+
+                        data.forEach(function(tweetJson) {
+
+                            var point = new Object();
+                            point.y = tweetJson.sentiment_score;
+                            point.x = tweetJson.created_at;
+                            point.tweet = tweetJson.text;
+                            point.user = tweetJson.user_name;
+                            //var pointJson = JSON.stringify(point);
+                            if (name == "Negative") {
+                                staticChart.series[0].addPoint(point, true, false);
+                            } else if (name == "Positive") {
+                                staticChart.series[1].addPoint(point, true, false);
+                            }
+
+                        });
                     }
-                }
             );
         });
+
     });
     </script>
 
