--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,182 +5,46 @@
 <html>
     <head>
         <title>@title</title>
+
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+
+        <script src="@routes.Assets.at("javascripts/jquery-1.11.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </head>
 
     <body>
-        <nav class="navbar navbar-default navbar-static-top">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Twitter Analyst</a>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="@routes.Application.liveTweets()">Tweet Analyst</a>
                 </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="@routes.Application.liveTweets()">Live</a></li>
+                        <li><a href="@routes.Application.timelineTweets()">Timeline</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
             </div>
         </nav>
 
         <div class="container" role="main">
 
+            <div class="page-header"></div>
+
             <div id="container" style="min-width: 310px; height: 400px; max-width: 800px; margin: 0 auto"></div>
 
-            <div class="page-header">
-            </div>
+            @content
 
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="panel panel-success">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Positive Tweets</h3>
-                        </div>
-                        <div class="panel-body">
-                            Panel content
-                        </div>
-                    </div>
-                </div><!-- /.col-lg-6 -->
-                <div class="col-lg-6">
-                    <div class="panel panel-danger">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Negative Tweets</h3>
-                        </div>
-                        <div class="panel-body">
-                            Panel content
-                        </div>
-                    </div>
-                </div><!-- /.col-lg-6 -->
-            </div>
-
-            <div class="page-header">
-            </div>
-
-            <div id="container2" style="height: 400px; min-width: 310px"></div>
+            <div class="page-header"></div>
 
         </div>
     </body>
-
-    <script src="@routes.Assets.at("javascripts/jquery-1.11.1.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/highcharts.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/exporting.js")" type="text/javascript"></script>
-
-    <script>
-        var liveChart, staticChart;
-
-        function updateLiveChart(data) {
-            var tweetJson = eval("(" + data + ')');
-
-            var point = new Object();
-            //todo parse to 2 dec and parse date to show tooltip
-            point.y = tweetJson.score;
-            point.x = tweetJson.created_at;
-            point.tweet = tweetJson.text;
-            point.user = tweetJson.user_name;
-
-            if (tweetJson.sentiment == "negative") {
-                liveChart.series[0].addPoint(point, true, liveChart.series[0].activePointCount > 0);
-            } else if (tweetJson.sentiment == "neutral") {
-                liveChart.series[1].addPoint(point, true, liveChart.series[1].activePointCount > 0);
-            } else if (tweetJson.sentiment == "positive") {
-                liveChart.series[2].addPoint(point, true, liveChart.series[2].activePointCount > 0);
-            }
-        }
-    </script>
-
-    <script src="@routes.Assets.at("javascripts/live-tweets-chart.js")" type="text/javascript"></script>
-
-    <script>
-        $(function() {
-            var host = window.location.host;
-            var wsUri = "ws://" + host + "@routes.Application.wsTweets()";
-            var WS = window['MozWebSocket'] ? MozWebSocket : WebSocket;
-            var tweetsSocket = new WS(wsUri);
-
-            tweetsSocket.onopen = function() {
-                tweetsSocket.send("pump");
-            };
-            tweetsSocket.onmessage = function(event) {
-                updateLiveChart(event.data);
-            };
-            tweetsSocket.onerror = function(event) {
-                console.log(event);
-                tweetsSocket.close();
-            };
-            tweetsSocket.onclose = function(event) {
-                console.log(event);
-                tweetsSocket.close();
-            };
-        });
-
-    $(function () {
-        staticChart = new Highcharts.Chart({
-                chart: {
-                    renderTo: 'container2',
-                    defaultSeriesType: 'StockChart'
-                },
-                rangeSelector: {
-                    selected: 4
-                },
-                yAxis: {
-                    labels: {
-                        formatter: function () {
-                            return (this.value > 0 ? ' + ' : '') + this.value + '%';
-                    }
-                },
-                plotLines: [{
-                    value: 0,
-                    width: 2,
-                    color: 'silver'
-                    }]
-                },
-                plotOptions: {
-                    series: {
-                        compare: 'percent'
-                    }
-                },
-                tooltip: {
-                    pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y}</b> ({point.tweet}%)<br/>',
-                    valueDecimals: 2
-                },
-                series: [
-                    {
-                        name: 'Negative',
-                        color: 'rgba(223, 83, 83, .5)',
-                        data: []
-                    },
-                    {
-                        name: 'Positive',
-                        color: 'rgba(60, 118, 61, .5)',
-                        data: []
-                    }
-                ]
-        });
-
-        var names = ['Negative', 'Positive'];
-        var countSeries = 0;
-        names.forEach(function(name) {
-            var url =  @routes.Application.tweets("") + name;
-            var tweetsBySentimentURL = "//" + window.location.host + url;
-            $.getJSON(tweetsBySentimentURL,
-                    function (data) {
-
-                        data.forEach(function(tweetJson) {
-                            var point = new Object();
-                            point.y = tweetJson.sentiment_score;
-                            point.x = tweetJson.created_at;
-                            point.tweet = tweetJson.text;
-                            point.user = tweetJson.user_name;
-                            //var pointJson = JSON.stringify(point);
-                            if (name == "Negative") {
-                                staticChart.series[0].addPoint(point, true, false);
-                            } else if (name == "Positive") {
-                                staticChart.series[1].addPoint(point, true, false);
-                            }
-
-                        });
-                    }
-            );
-        });
-
-    });
-    </script>
 
 </html>
