--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -29,6 +29,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="@routes.Application.liveTweets()">Live</a></li>
                         <li><a href="@routes.Application.timelineTweets()">Timeline</a></li>
+                        <li><a href="@routes.Application.pieTweets()">Pie</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -38,9 +39,9 @@
 
             <div class="page-header"></div>
 
-            <div id="container" style="min-width: 310px; height: 400px; max-width: 800px; margin: 0 auto"></div>
-
-            @content
+            <div id="container" style="min-width: 310px; height: 400px; max-width: 800px; margin: 0 auto">
+                @content
+            </div>
 
             <div class="page-header"></div>
 
