--- a/app/views/timeline_tweets.scala.html
+++ b/app/views/timeline_tweets.scala.html
@@ -2,7 +2,17 @@
 
 @main("Welcome to Twitter Analyst") {
 
-        <script src="@routes.Assets.at("javascripts/stock/highstock.js")" type="text/javascript"></script>
+        @*<script src="@routes.Assets.at("javascripts/stock/highstock.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/stock/exporting.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/timeline-tweets-chart.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/timeline-tweets-chart.js")" type="text/javascript"></script>*@
+
+    <script src="@routes.Assets.at("javascripts/jquery-ui.js")" type="text/javascript"></script>
+
+    <script>
+        $(function() {
+            $("#datepicker").datepicker();
+        });
+    </script>
+
+    <p>Date: <input type='text' id='datepicker'></p>
 }
