--- a/app/views/timeline_tweets.scala.html
+++ b/app/views/timeline_tweets.scala.html
@@ -15,4 +15,51 @@
     </script>
 
     <p>Date: <input type='text' id='datepicker'></p>
+
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Positive Tweets</h3>
+                </div>
+                <div class="panel-body">
+
+                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>User</th>
+                            <th>Sentiment Score</th>
+                            <th>Tweet</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
+        </div><!-- /.col-lg-6 -->
+        <div class="col-lg-6">
+            <div class="panel panel-danger">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Negative Tweets</h3>
+                </div>
+                <div class="panel-body">
+
+                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>User</th>
+                            <th>Sentiment Score</th>
+                            <th>Tweet</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
+        </div><!-- /.col-lg-6 -->
+    </div>
 }
