--- a/app/views/pie_tweets.scala.html
+++ b/app/views/pie_tweets.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Welcome to Twitter Analyst") {
+@main("Welcome to Twitter Analyst - Tweet Pie") {
 
         <script src="@routes.Assets.at("javascripts/pie/highcharts.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/pie/exporting.js")" type="text/javascript"></script>
