--- a/app/views/timeline_tweets.scala.html
+++ b/app/views/timeline_tweets.scala.html
@@ -1,65 +1,9 @@
 @(message: String)
 
-@main("Welcome to Twitter Analyst") {
+@main("Welcome to Twitter Analyst - Tweet Timeline") {
 
-        @*<script src="@routes.Assets.at("javascripts/stock/highstock.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/stock/highstock.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/stock/exporting.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/timeline-tweets-chart.js")" type="text/javascript"></script>*@
+        <script src="@routes.Assets.at("javascripts/timeline-tweets-chart.js")" type="text/javascript"></script>
 
-    <script src="@routes.Assets.at("javascripts/jquery-ui.js")" type="text/javascript"></script>
-
-    <script>
-        $(function() {
-            $("#datepicker").datepicker();
-        });
-    </script>
-
-    <p>Date: <input type='text' id='datepicker'></p>
-
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="panel panel-success">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Positive Tweets</h3>
-                </div>
-                <div class="panel-body">
-
-                </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>User</th>
-                            <th>Sentiment Score</th>
-                            <th>Tweet</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                    </tbody>
-                </table>
-            </div>
-        </div><!-- /.col-lg-6 -->
-        <div class="col-lg-6">
-            <div class="panel panel-danger">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Negative Tweets</h3>
-                </div>
-                <div class="panel-body">
-
-                </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>User</th>
-                            <th>Sentiment Score</th>
-                            <th>Tweet</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                    </tbody>
-                </table>
-            </div>
-        </div><!-- /.col-lg-6 -->
-    </div>
 }
